--- a/chat_app/templates/chat_app/index.html
+++ b/chat_app/templates/chat_app/index.html
@@ -37,5 +37,6 @@
 {% endblock %}
 
 {% block extra_scripts %}
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <script src="/static/js/chat.js"></script>
 {% endblock %}
